# freemind-tui

./: Cargo.toml  README.md
src/: app.rs  data.rs  main.rs
